PLANNER-1709 Implement custom constraint justifications (#2180)