@@ -1,7 +1,6 @@
 package org.optaplanner.examples.machinereassignment.optional.score;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
@@ -461,8 +460,7 @@ public class MachineReassignmentIncrementalScoreCalculator
         for (MrServiceScorePart serviceScorePart : serviceScorePartMap.values()) {
             MrService service = serviceScorePart.service;
             if (service.getLocationSpread() > serviceScorePart.locationBag.size()) {
-                serviceLocationSpreadMatchTotal.addConstraintMatch(
-                        Arrays.asList(service),
+                serviceLocationSpreadMatchTotal.addConstraintMatch(List.of(service),
                         HardSoftLongScore.of(
                                 -(service.getLocationSpread() - serviceScorePart.locationBag.size()), 0));
             }
@@ -470,13 +468,11 @@ public class MachineReassignmentIncrementalScoreCalculator
         for (MrMachineScorePart machineScorePart : machineScorePartMap.values()) {
             for (MrMachineCapacityScorePart machineCapacityScorePart : machineScorePart.machineCapacityScorePartList) {
                 if (machineCapacityScorePart.maximumAvailable < 0L) {
-                    maximumCapacityMatchTotal.addConstraintMatch(
-                            Arrays.asList(machineCapacityScorePart.machineCapacity),
+                    maximumCapacityMatchTotal.addConstraintMatch(List.of(machineCapacityScorePart.machineCapacity),
                             HardSoftLongScore.of(machineCapacityScorePart.maximumAvailable, 0));
                 }
                 if (machineCapacityScorePart.safetyAvailable < 0L) {
-                    loadCostMatchTotal.addConstraintMatch(
-                            Arrays.asList(machineCapacityScorePart.machineCapacity),
+                    loadCostMatchTotal.addConstraintMatch(List.of(machineCapacityScorePart.machineCapacity),
                             HardSoftLongScore.of(0, machineCapacityScorePart.safetyAvailable
                                     * machineCapacityScorePart.machineCapacity.getResource().getLoadCostWeight()));
                 }
@@ -490,8 +486,7 @@ public class MachineReassignmentIncrementalScoreCalculator
                     long minimumTargetAvailable = originAvailable * balancePenalty.getMultiplicand();
                     // targetAvailable might be negative, but that's ok (and even avoids score traps)
                     if (targetAvailable < minimumTargetAvailable) {
-                        balanceCostMatchTotal.addConstraintMatch(
-                                Arrays.asList(machineScorePart.machine, balancePenalty),
+                        balanceCostMatchTotal.addConstraintMatch(List.of(machineScorePart.machine, balancePenalty),
                                 HardSoftLongScore.of(0,
                                         -(minimumTargetAvailable - targetAvailable) * balancePenalty.getWeight()));
                     }
@@ -500,8 +495,7 @@ public class MachineReassignmentIncrementalScoreCalculator
             for (Map.Entry<MrService, Integer> entry : machineScorePart.serviceBag.entrySet()) {
                 Integer serviceProcessCount = entry.getValue();
                 if (serviceProcessCount > 1) {
-                    serviceConflictMatchTotal.addConstraintMatch(
-                            Arrays.asList(machineScorePart.machine, entry.getKey()),
+                    serviceConflictMatchTotal.addConstraintMatch(List.of(machineScorePart.machine, entry.getKey()),
                             HardSoftLongScore.of(-(serviceProcessCount - 1), 0));
                 }
             }
@@ -512,27 +506,23 @@ public class MachineReassignmentIncrementalScoreCalculator
                 int toDependencyNeighborhoodProcessCount =
                         serviceScorePart.neighborhoodBag.getOrDefault(processAssignment.getNeighborhood(), 0);
                 if (toDependencyNeighborhoodProcessCount == 0) {
-                    serviceDependencyMatchTotal.addConstraintMatch(
-                            Arrays.asList(processAssignment, toDependencyService),
+                    serviceDependencyMatchTotal.addConstraintMatch(List.of(processAssignment, toDependencyService),
                             HardSoftLongScore.of(-1, 0));
                 }
             }
             if (processAssignment.isMoved()) {
-                processMoveCostMatchTotal.addConstraintMatch(
-                        Arrays.asList(processAssignment),
+                processMoveCostMatchTotal.addConstraintMatch(List.of(processAssignment),
                         HardSoftLongScore.of(0,
                                 -((long) processAssignment.getProcessMoveCost()
                                         * globalPenaltyInfo.getProcessMoveCostWeight())));
-                machineMoveCostMatchTotal.addConstraintMatch(
-                        Arrays.asList(processAssignment),
+                machineMoveCostMatchTotal.addConstraintMatch(List.of(processAssignment),
                         HardSoftLongScore.of(0,
                                 -((long) processAssignment.getMachineMoveCost()
                                         * globalPenaltyInfo.getMachineMoveCostWeight())));
             }
         }
         for (int i = 0; i < serviceMoveCost; i++) {
-            serviceMoveCostMatchTotal.addConstraintMatch(
-                    Arrays.asList(i),
+            serviceMoveCostMatchTotal.addConstraintMatch(List.of(i),
                     HardSoftLongScore.of(0, -globalPenaltyInfo.getServiceMoveCostWeight()));
         }
 
